# ShowTrackr-Web

./: .coveragerc  .flake8  .gitignore  .prettierignore  .prettierrc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  eslint.config.mjs  make_release.py  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.bat  run.py  run.sh  setup.bat  setup.py  setup.sh
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yml  stale.yml  summary.yml
apps/desktop/data/: .env.example
apps/desktop/src/core/: __init__.py  config.py
apps/desktop/src/core/models/: __init__.py  watchlist_item.py
apps/desktop/src/core/routes/: __init__.py  items.py  main.py  settings.py
apps/desktop/src/core/static/css/: input.css  output.css
apps/desktop/src/core/static/js/: app.js  bundle.js
apps/desktop/src/core/templates/: _add_edit_item_form.html  _changelog.html  _controls_bar.html  _controls_bar_oob.html  _filter_dropdown.html  _form_error.html  _sort_dropdown.html  _watchlist_container.html  _watchlist_items.html  about.html  base.html  index.html  settings.html
apps/desktop/src/core/templates/errors/: 404.html  500.html
apps/desktop/tests/: conftest.py  test_init_helpers.py
apps/desktop/tests/models/: test_watchlist_item.py
apps/desktop/tests/routes/: test_items_routes.py  test_main_routes.py  test_settings_routes.py
docs/: changelog.md  features.md  index.md  running.md  setup.md
docs/previews/: preview.md
previews/: preview.md
scripts/: make_release.py  run.bat  run.py  run.sh  setup.bat  setup.py  setup.sh
src/watchlist/: __init__.py  config.py
src/watchlist/models/: __init__.py  watchlist_item.py
src/watchlist/routes/: __init__.py  items.py  main.py  settings.py
src/watchlist/static/css/: input.css  output.css
src/watchlist/static/js/: app.js
src/watchlist/templates/: _add_edit_item_form.html  _changelog.html  _controls_bar.html  _controls_bar_oob.html  _filter_dropdown.html  _form_error.html  _sort_dropdown.html  _watchlist_container.html  _watchlist_items.html  about.html  base.html  index.html  settings.html
src/watchlist/templates/errors/: 404.html  500.html
tests/: conftest.py  test_init_helpers.py
tests/models/: test_watchlist_item.py
tests/routes/: test_items_routes.py  test_main_routes.py  test_settings_routes.py
